Seguridad/ejemplos/iptables-acceptSSH-rejectWEB
# Generated by iptables-save v1.4.7 on Tue Oct 16 04:59:40 2012
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [8:576]
:Cid17236X32552.0 - [0:0]
:In_RULE_0 - [0:0]
:RULE_4 - [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -s 127.0.0.1/32 -i eth3 -j Cid17236X32552.0 
-A INPUT -s 192.168.0.144/32 -i eth3 -j Cid17236X32552.0 
-A INPUT -i lo -j ACCEPT 
-A INPUT -p icmp -m icmp --icmp-type 3 -m state --state NEW -j ACCEPT 
-A INPUT -p icmp -m icmp --icmp-type 0/0 -m state --state NEW -j ACCEPT 
-A INPUT -p icmp -m icmp --icmp-type 11/0 -m state --state NEW -j ACCEPT 
-A INPUT -p icmp -m icmp --icmp-type 11/1 -m state --state NEW -j ACCEPT 
-A INPUT -p tcp -m tcp -m multiport --dports 22 -m state --state NEW -j ACCEPT
-A INPUT -p tcp -m tcp -m multiport --dports 80 -m state --state NEW -j REJECT
-A INPUT -p tcp -m tcp --dport 113 -j REJECT --reject-with icmp-port-unreachable 
-A INPUT -j RULE_4 
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A OUTPUT -o lo -j ACCEPT 
-A Cid17236X32552.0 -d 127.0.0.1/32 -j In_RULE_0 
-A Cid17236X32552.0 -d 192.168.0.144/32 -j In_RULE_0 
-A In_RULE_0 -j LOG --log-prefix "RULE 0 -- DENY " --log-level 6 
-A In_RULE_0 -j DROP 
-A RULE_4 -j LOG --log-prefix "RULE 4 -- DENY " --log-level 6 
-A RULE_4 -j DROP 
COMMIT
# Completed on Tue Oct 16 04:59:40 2012
